<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradients"
    tools:context="com.example.dilumdesilva.brain_tester.game_menu">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/menuScreen_Ll"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="130dp">


        <Button
            android:id="@+id/btn_newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/verticle_buttonSpace"
            android:text="@string/menu_new_game"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menu_buttonText"
            android:textSize="@dimen/menu_button_textSize"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_continueGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/verticle_buttonSpace"
            android:text="@string/menu_continue"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menu_buttonText"
            android:textSize="@dimen/menu_button_textSize"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_aboutGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/verticle_buttonSpace"
            android:text="@string/menu_about"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menu_buttonText"
            android:textSize="@dimen/menu_button_textSize"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_exitGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/verticle_buttonSpace"
            android:text="@string/menu_exit"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menu_buttonText"
            android:textSize="@dimen/menu_button_textSize"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:textColor="@color/Text"
            android:text="@string/copyright_messege"
            android:textSize="8sp"
            android:layout_marginTop="120dp"/>

    </LinearLayout>

</RelativeLayout>
